--- a/mbdyn/CHANGES
+++ b/mbdyn/CHANGES
@@ -41,6 +41,7 @@ MBDyn 1.X-Devel
 		- fixed time-dependent output meter
 		- fixed missing "forever" in double ramp descent final time
 		  (Reinhard Resch)
+		- fixed modal body assembly (Reinhard Resch)
 
 MBDyn 1.7.1
 	Enhancements:
@@ -1430,4 +1431,5 @@ MBDyn 1.0.1
 
 MBDyn 1.0.0
 	First release
+
 
