document hydrodynamic_plain_bearing_with_offset (Reinhard Resch)

--- a/mbdyn/manual/input/modules.tex
+++ b/mbdyn/manual/input/modules.tex
@@ -265,11 +265,13 @@ This module implements several joints.
 
 
 
-\subsection{Module-hydrodynamic\_plain\_bearing}
+\subsection{Module-hydrodynamic\_plain\_bearing\_with\_offset}
 \emph{Author: Reinhard Resch}
 
-\noindent
-This module implements a lubricated bearing.
+%\noindent
+%This module implements a lubricated bearing.
+
+\input{module-hydrodynamic_plain_bearing}
 
 \subsection{Module-imu}
 \emph{Author: Pierangelo Masarati}
