--- a/mbdyn/manual/mybib.bib
+++ b/mbdyn/manual/mybib.bib
@@ -3103,3 +3103,40 @@
 	year = {1975}
 }
 
+@article{FLORES-2011-MUBO,
+	author = {P. Flores and M. Machado and M. T. Silva and J. M. Martins},
+	title = {On the continuous contact force models for soft materials in multibody dynamics},
+	journal = MUBO,
+	month = {March},
+	year = {2011},
+	volume = {25},
+	number = {3},
+	pages = {357--375},
+	note = {{doi:10.1007/s11044-010-9237-4}},
+	pdf = {flores-2011-mubo.pdf}
+}
+
+@article{HUNT-1975,
+	author = {K.~H. Hunt and F.~R.~E. Crossley},
+	title = {Coefficient of restitution interpreted as damping in vibroimpact},
+ 	journal = {Journal of Applied Mechanics, Transactions {ASME}},	
+	volume = {42},
+	number = {2},
+	pages = {440--445},
+	year = {1975},
+	note = {{doi:10.1115/1.3423596}}
+}
+
+@article{LANKARANI-1994-ND,
+	author="Lankarani, Hamid M.  and Nikravesh, Parviz E.",
+	title="Continuous contact force models for impact analysis in multibody systems",
+	journal="Nonlinear Dynamics",
+	year="1994",
+	volume="5",
+	number="2",
+	pages="193--207",
+	xissn="1573-269X",
+	note = {{doi:10.1007/BF00045676}},
+	xurl="http://dx.doi.org/10.1007/BF00045676"
+}
+
