--- a/mbdyn/manual/input/netcdfout.tex
+++ b/mbdyn/manual/input/netcdfout.tex
@@ -507,8 +507,7 @@ Section~\ref{sec:NetCDF:Octave}):
     octave:1> VR_3D = ncread('mbdyn_output.nc', 'eig.0.VR');
     octave:2> VR_cpx = VR_3D(:, :, 1) + 1i*VR_3D(:, :, 2);
     octave:3> clear VR_3D
-    octave:4> # access 'component' of 'mode'
-    octave:5> # access 'eigenvalue'
+    octave:4> VR('component', 'mode') % access 'component' of 'mode'
 \end{verbatim}
 The same using the Octave package \texttt{octcdf}, see Section~\ref{sec:NetCDF:Octave}:
 \begin{verbatim}
@@ -517,8 +516,7 @@ The same using the Octave package \texttt{octcdf}, see Section~\ref{sec:NetCDF:O
     octave:2> VR_3D = nc{'eig.0.VR'}(:);
     octave:3> VR_cpx = VR_3D(1, :, :) + 1i*VR_3D(2, :, :);
     octave:4> clear VR_3D
-    octave:5> VR_cpx(:, mode, component); # access 'component' of 'mode'
-    octave:6> # access 'eigenvalue'
+    octave:5> VR_cpx(component, mode); % access 'component' of 'mode'
 \end{verbatim}
 The following example shows how to reconstruct the discrete time eigenvalues vector
 \texttt{Lambda} and the corresponding continuous time eigenvalues vector
