--- a/mbdyn/manual/input/netcdfout.tex
+++ b/mbdyn/manual/input/netcdfout.tex
@@ -520,7 +520,7 @@ The same using the Octave package \texttt{octcdf}, see Section~\ref{sec:NetCDF:O
 \end{verbatim}
 The following example shows how to reconstruct the discrete time eigenvalues vector
 \texttt{Lambda} and the corresponding continuous time eigenvalues vector
-\texttt{lambda} (see Section~\ref{sec:IVP:eigenanalysis}:
+\texttt{lambda} (see Section~\ref{sec:IVP:eigenanalysis}):
 \paragraph{Example 2.}
 \begin{verbatim}
     # load alpha and dCoef of eigensolution 0
