--- a/mbdyn/manual/mybib.bib
+++ b/mbdyn/manual/mybib.bib
@@ -3140,3 +3140,14 @@
 	xurl="http://dx.doi.org/10.1007/BF00045676"
 }
 
+@article{WITKOWSKI-2009-EAS-ANS,
+	author = {Wojciech Witkowski},
+	title = {4-Node combined shell element with semi-{EAS}-{ANS} strain interpolations in 6-parameter shell theories with drilling degrees of freedom},
+	journal = {Computational Mechanics},
+	year = {2009},
+	volume = {43},
+	number = {2},
+	pages = {307--319},
+	note = {{doi:10.1007/s00466-008-0307-x}}
+}
+
